=========================================================================
CHANGE LOG
=========================================================================

2007-07-25  Warren L. DeLano <warren@delsci.com>

	* fixed bug with command-line rendering with groups 
			
	* worked-around problem with .MOE triple-bond valence info

	* fixed bug in .MOE reader with duplicate graphics object names

2007-07-23  Warren L. DeLano <warren@delsci.com>

	* fixed bug (mostly) harmless bug unpacking colors from sessions
	
	* fixed problems with box selecting when using non-default stereo
	parameters
	
2007-07-18  Warren L. DeLano <warren@delsci.com>

	* fixed problems with atomic picking when using non-default
	stereo parameters
	
2007-07-09  Warren L. DeLano <warren@delsci.com>

	* DrgO mouse action added

	* PyMOL 1.0 branch created
	
2007-07-08  Warren L. DeLano <warren@delsci.com>

	* fixed atom picking in stereo modes with customized parameters
	
	* adjusted idle behavior when playing movies, sculpting, etc.

	* added new selection operators: masked and protected

2007-07-03  Warren L. DeLano <warren@delsci.com>

	* select no longer 
	
	* missing more changelogs!

2007-06-21  Warren L. DeLano <warren@delsci.com>

	* issued PyMOL 1.0, with updates to the help menu

	* updated numerous command entries in code for online support
	
	* missing ChangeLog entries for the past few weeks...ugh.
	
2007-05-30  Warren L. DeLano <warren@delsci.com>

	* align command now has default max_gap of 50 (for performance)
	
	* various updates to the sequence viewer to improve behavior
	
	* added "super" command to enable more robust alignments
	
2007-05-29  Warren L. DeLano <warren@delsci.com>

	* added hide_long_bonds setting to help with animating rxns
	
	* fixed problem reading NMR structures with HETATM/CONECT combo
	
2007-05-27  Warren L. DeLano <warren@delsci.com>

	* fixed map_set "average" action (which was broken..)
	
2007-05-24  Warren L. DeLano <warren@delsci.com>
